# Lumina

./: .gitignore  CMakeLists.txt  CMakePresets.json  Lumina.sln  README.md  a.out  fileA  fileB.lum  test.lumina
Lumina/: Lumina.vcxproj  Lumina.vcxproj.filters  a.out  resultMetaToken.txt  resultToken.txt
LuminaInstaller/: LuminaInstaller.vdproj
doc/: 01-overview.md  02-getting-started.md  03-language-guide.md  04-builtins.md  05-pipeline.md  06-structures-and-blocks.md  07-textures.md  08-namespaces.md  10-compiled-artifact.md  11-appendix-cheat-sheet.md  compiled-artifact-example.json  full_feature_test.lum  index.md  lumina_cheat_sheet.md
include/: argument_parser.hpp  compiler.hpp  expected.hpp  parser.hpp  shader_code.hpp  shader_impl.hpp  shader_info.hpp  token.hpp  tokenizer.hpp  utils.hpp
includes/: ast.hpp  compiler.hpp  converter.hpp  file_io.hpp  parser.hpp  precompilation_parser.hpp  semantic_parser.hpp  source_manager.hpp  token.hpp  tokenizer.hpp  utils.hpp
predefined_header/: DirectionalLight  Material  MathUtils  TimeConstants  ViewRegionConstant  WidgetConstant  camera_constants.lum  directional_light.lum  material.lum  math_utils.lum  quaternion  transform  transform.lum  view_region_constant.lum  widget_constant.lum
shader/: shader.lum  shader.out  test.lum
src/: compiler.cpp  lexer.cpp  lexer_symbol_body.cpp  main.cpp  parser.cpp  parser_compose_expression.cpp  parser_deduce_types.cpp  parser_lumina_types.cpp  parser_symbol_body.cpp  printer.cpp  shader_impl.cpp  token.cpp  tokenizer.cpp  utils.cpp
srcs/: compiler.cpp  converter.cpp  (+9 more)
(+116 files in other folders)
